--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,25 +18,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: HealthCheck
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v3
+      - name: HealthCheck
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
-  message:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Discord Webhook Action
-      uses: tsickert/discord-webhook@v5.3.0
-      with:
-        webhook-url: ${{ secrets.WEBHOOK_URL }}
-        content: "Test"
+      - name: Slack notification - Success
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ success() }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: test-report
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_ICON: https://www.clipartmax.com/png/middle/179-1795386_patient-success-success-icon-png.png
+          SLACK_MESSAGE: ':alarm_clock: Testes Agendados executados com Sucesso! :white_check_mark:'
+          SLACK_TITLE: ':alarm_clock: Testes Agendados executados com Sucesso! :white_check_mark:'
+          SLACK_USERNAME: SUCESSO
+          
+      - name: Slack notification - Falha
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ failure() }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: test-report
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_ICON: https://www.vhv.rs/dpng/d/431-4316378_error-icon-hope-for-justice-logo-hd-png.png
+          SLACK_MESSAGE: ':alarm_clock: Testes Agendados executados com Falhas! :fire:'
+          SLACK_TITLE: ':alarm_clock: Testes Agendados executados com Falhas! :fire:'
+          SLACK_USERNAME: FALHA
+            
